--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^3.22.0",
     "axios": "^0.19.0",
     "firebase": "^6.4.1",
+    "prettier": "^1.18.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
